# GTNH-Insight-Atlas

./: .gitattributes  .gitignore  AGENTS.md  README.md  VERSION.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
content/: index.md
content/foundations/: overclock.md
content/pages/: data-browser.md
content/progression/: index.md
content/reference/: voltage-tiers.md
content/topics/electric-blast-furnace/: analysis.md  index.md  tutorial.md  verification.md
content/topics/electric-blast-furnace/snippets/: heat-capacity.md
data/machines/: electric-blast-furnace.yml
data/mechanics/: overclock.yml  voltage-tiers.yml
data/schemas/: fact.schema.json  page.schema.json
legacy/: README.md  migration-map.yml
scripts/: __init__.py
scripts/atlas/: __init__.py  extract_site_data.py  link_graph.py  markdown_index.py  markdown_utils.py  source_refs.py  validate_data.py
scripts/atlas/tests/: test_extract_site_data.py  test_link_graph.py  test_markdown_index.py  test_schema.py  test_source_refs.py  test_status_system.py  test_validate_data.py
site/.vitepress/: config.ts
site/.vitepress/components/: DataBrowser.vue  DataDashboard.vue  FactCard.vue  KnowledgeGraph.vue  OverclockSandbox.vue  SourceTrace.vue  VerificationBadge.vue
site/.vitepress/theme/: custom.css  data.data.ts  index.ts
