[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gtnh-insight-atlas"
version = "0.1.0"
description = "Data validation and extraction pipeline for GTNH Insight Atlas."
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.21",
  "markdown-it-py>=3.0",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"
